! How i get rid of your generic_list_wrapper? ! Some fixes inside activity page; -- Some parts already covered with information we don't need to create extra class for them.

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -2809,7 +2809,7 @@ dl.addrules dt.floatleft {
 	z-index: 1;
 }
 
-.generic_list_wrapper, .windowbg, .windowbg2 {
+.windowbg, .windowbg2 {
 	background: #f0f4f7;
 	margin: 12px 0 0 0;
 	padding: 12px 16px;
@@ -2838,15 +2838,6 @@ dl.addrules dt.floatleft {
 /* If its not approved then it needs to be seen first */
 .windowbg.approvebg, .windowbg2.approvebg {
 	background: #FFEAEA !important; /* important is needed for messageindex to avoid creating extra rules for locked/stick/locked&stick situations */
-}
-
-.generic_list_wrapper .additional_row {
-	margin: 0;
-	padding: 5px 0;
-	border-radius: 0;
-}
-.generic_list_wrapper table.table_grid {
-	border-bottom: 1px solid #aaa;
 }
 
 div#editlang_desc {
@@ -3106,7 +3097,6 @@ span.postby {
 	padding: 8px 10px 8px 10px;
 	border-bottom-left-radius: 0;
 	border-bottom-right-radius: 0;
-	border-bottom: 0;
 }
 .lastpost span.last_post {
 	float: right;
@@ -3672,9 +3662,6 @@ h3.titlebg, h4.titlebg, .titlebg, h3.subbg, h4.subbg, .subbg {
 	margin: 0 0 10px 0;
 	padding: 12px 9px 8px 9px;
 	box-sizing: border-box;
-}
-.generic_list_wrapper .information div {
-	background: none;
 }
 .information a {
 	font-weight: bold;
